fixed spacing of all pages in tool

--- a/src/components/builder/solutions/_SolutionView.scss
+++ b/src/components/builder/solutions/_SolutionView.scss
@@ -52,3 +52,7 @@ div.solutions .bx--tile.tile-card-title .description-card a .center-vertical {
     position: relative;
     top: 46%;
 }
+
+.sol-page__row {
+    width: 100%;
+}
